Dividing the CSS for a dark & light scheme
Dividing the custom properties, elements and classes for a dark & light scheme.

--- a/colors.html
+++ b/colors.html
@@ -30,56 +30,96 @@
         <div class="content__row">
             
             <div class="grid grid-cols">
-                <div class="col col-2-span-10">
+                <div class="col col-span-12">
 
                     <h1>Colors</h1>
 
                     <p><strong>Primary</strong></p>
 
                     <div class="colors text-code">
-                        <div class="primary-10">primary-10</div>
-                        <div class="primary-20">primary-20</div>
-                        <div class="primary-30">primary-30</div>
-                        <div class="primary-40">primary-40</div>
-                        <div class="primary-50">primary-50</div>
-                        <div class="primary-60">primary-60</div>
-                        <div class="primary-70">primary-70</div>
+                        <div class="bg-primary-10">bg-primary-10</div>
+                        <div class="bg-primary-20">bg-primary-20</div>
+                        <div class="bg-primary-30">bg-primary-30</div>
+                        <div class="bg-primary-40">bg-primary-40</div>
+                        <div class="bg-primary-50">bg-primary-50</div>
+                        <div class="bg-primary-60">bg-primary-60</div>
+                        <div class="bg-primary-70">bg-primary-70</div>
+                    </div>
+
+                    <div class="colors text-code">
+                        <div class="text-primary-10">text-primary-10</div>
+                        <div class="text-primary-20">text-primary-20</div>
+                        <div class="text-primary-30">text-primary-30</div>
+                        <div class="text-primary-40">text-primary-40</div>
+                        <div class="text-primary-50">text-primary-50</div>
+                        <div class="text-primary-60">text-primary-60</div>
+                        <div class="text-primary-70">text-primary-70</div>
                     </div>
 
                     <p><strong>Secondary</strong></p>
 
                     <div class="colors text-code">
-                        <div class="secondary-10">secondary-10</div>
-                        <div class="secondary-20">secondary-20</div>
-                        <div class="secondary-30">secondary-30</div>
-                        <div class="secondary-40">secondary-40</div>
-                        <div class="secondary-50">secondary-50</div>
-                        <div class="secondary-60">secondary-60</div>
-                        <div class="secondary-70">secondary-70</div>
+                        <div class="bg-secondary-10">bg-secondary-10</div>
+                        <div class="bg-secondary-20">bg-secondary-20</div>
+                        <div class="bg-secondary-30">bg-secondary-30</div>
+                        <div class="bg-secondary-40">bg-secondary-40</div>
+                        <div class="bg-secondary-50">bg-secondary-50</div>
+                        <div class="bg-secondary-60">bg-secondary-60</div>
+                        <div class="bg-secondary-70">bg-secondary-70</div>
+                    </div>
+
+                    <div class="colors text-code">
+                        <div class="text-secondary-10">text-secondary-10</div>
+                        <div class="text-secondary-20">text-secondary-20</div>
+                        <div class="text-secondary-30">text-secondary-30</div>
+                        <div class="text-secondary-40">text-secondary-40</div>
+                        <div class="text-secondary-50">text-secondary-50</div>
+                        <div class="text-secondary-60">text-secondary-60</div>
+                        <div class="text-secondary-70">text-secondary-70</div>
                     </div>
 
                     <p><strong>Accent</strong></p>
 
                     <div class="colors text-code">
-                        <div class="accent-10">accent-10</div>
-                        <div class="accent-20">accent-20</div>
-                        <div class="accent-30">accent-30</div>
-                        <div class="accent-40">accent-40</div>
-                        <div class="accent-50">accent-50</div>
-                        <div class="accent-60">accent-60</div>
-                        <div class="accent-70">accent-70</div>
+                        <div class="bg-accent-10">bg-accent-10</div>
+                        <div class="bg-accent-20">bg-accent-20</div>
+                        <div class="bg-accent-30">bg-accent-30</div>
+                        <div class="bg-accent-40">bg-accent-40</div>
+                        <div class="bg-accent-50">bg-accent-50</div>
+                        <div class="bg-accent-60">bg-accent-60</div>
+                        <div class="bg-accent-70">bg-accent-70</div>
+                    </div>
+
+                    <div class="colors text-code">
+                        <div class="text-accent-10">text-accent-10</div>
+                        <div class="text-accent-20">text-accent-20</div>
+                        <div class="text-accent-30">text-accent-30</div>
+                        <div class="text-accent-40">text-accent-40</div>
+                        <div class="text-accent-50">text-accent-50</div>
+                        <div class="text-accent-60">text-accent-60</div>
+                        <div class="text-accent-70">text-accent-70</div>
                     </div>
 
                     <p><strong>Neutral</strong></p>
 
                     <div class="colors text-code">
-                        <div class="neutral-10">neutral-10</div>
-                        <div class="neutral-20">neutral-20</div>
-                        <div class="neutral-30">neutral-30</div>
-                        <div class="neutral-40">neutral-40</div>
-                        <div class="neutral-50">neutral-50</div>
-                        <div class="neutral-60">neutral-60</div>
-                        <div class="neutral-70">neutral-70</div>
+                        <div class="bg-neutral-10">bg-neutral-10</div>
+                        <div class="bg-neutral-20">bg-neutral-20</div>
+                        <div class="bg-neutral-30">bg-neutral-30</div>
+                        <div class="bg-neutral-40">bg-neutral-40</div>
+                        <div class="bg-neutral-50">bg-neutral-50</div>
+                        <div class="bg-neutral-60">bg-neutral-60</div>
+                        <div class="bg-neutral-70">bg-neutral-70</div>
+                    </div>
+
+                    <div class="colors text-code">
+                        <div class="text-neutral-10">text-neutral-10</div>
+                        <div class="text-neutral-20">text-neutral-20</div>
+                        <div class="text-neutral-30">text-neutral-30</div>
+                        <div class="text-neutral-40">text-neutral-40</div>
+                        <div class="text-neutral-50">text-neutral-50</div>
+                        <div class="text-neutral-60">text-neutral-60</div>
+                        <div class="text-neutral-70">text-neutral-70</div>
                     </div>
 
                 </div>
