Adding image, audio and video pages

--- a/columns-fit.html
+++ b/columns-fit.html
@@ -20,6 +20,7 @@
                 <div>
                     <nav>
                         <a href="colors.html">Colors</a>
+                        <a href="image.html">Image</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
@@ -75,7 +76,7 @@
         <div class="footer__row">
             <div class="grid grid-cols">
                 <div class="col col-span-4">
-                    <h4>Columns</h4>
+                    <h4>Grid & Columns</h4>
                     <ul>
                         <li><a href="columns-fit.html">Columns fit</a></li>
                         <li><a href="columns-fixed.html">Columns fixed</a></li>
@@ -84,21 +85,17 @@
                     </ul>
                 </div>
                 <div class="col col-span-4">
-                    <h4>Columns</h4>
+                    <h4>Style</h4>
                     <ul>
-                        <li><a href="columns-fit.html">Columns fit</a></li>
-                        <li><a href="columns-fixed.html">Columns fixed</a></li>
-                        <li><a href="columns-group.html">Columns group</a></li>
-                        <li><a href="columns-span.html">Columns span</a></li>
+                        <li><a href="colors.html">Colors</a></li>
+                        <li><a href="typography.html">Typography</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
-                    <h4>Columns</h4>
+                    <h4>Content</h4>
                     <ul>
-                        <li><a href="columns-fit.html">Columns fit</a></li>
-                        <li><a href="columns-fixed.html">Columns fixed</a></li>
-                        <li><a href="columns-group.html">Columns group</a></li>
-                        <li><a href="columns-span.html">Columns span</a></li>
+                        <li><a href="audio-video.html">Audio & Video</a></li>
+                        <li><a href="image.html">Image</a></li>
                     </ul>
                 </div>
             </div>
