--- a/audio-video.html
+++ b/audio-video.html
@@ -29,46 +29,15 @@
     </header>
     <div class="page__content">
         <div class="content__row">
-
+            
             <div class="grid grid-cols">
-                <div class="col col-span-12">
-                    <h1>Columns fixed</h1>
-                    <p>Grids with a fixed number of columns using repeat with the number of columns and 1fr.</p>
+                <div class="col col-3-span-8">
+
+                    <h1>Audio & Video</h1>
+
+                    <p>Coming soon</p>
+
                 </div>
-            </div>
-
-        </div>
-        <div class="content__row show-grid">
-
-            <div class="grid grid-cols-1">
-                <div class="col">Col 01</div>
-            </div>
-
-            <div class="grid grid-cols-2">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-            </div>
-
-            <div class="grid grid-cols-3">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-                <div class="col">Col 03</div>
-            </div>
-
-            <div class="grid grid-cols-4">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-                <div class="col">Col 03</div>
-                <div class="col">Col 04</div>
-            </div>
-
-            <div class="grid grid-cols-6">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-                <div class="col">Col 03</div>
-                <div class="col">Col 04</div>
-                <div class="col">Col 05</div>
-                <div class="col">Col 06</div>
             </div>
 
         </div>
