Remove some image styles

--- a/image.html
+++ b/image.html
@@ -144,8 +144,6 @@
                         <figcaption>aspect-ratio="4/1"</figcaption>
                     </figure>
                 </div>
-                
-                
                 <div class="col">
                     <figure>
                         <img aspect-ratio="5/1" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
@@ -159,6 +157,39 @@
                              alt="Water reflection of Amersfoort">
                         <figcaption>aspect-ratio="6/1"</figcaption>
                     </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <img aspect-ratio="16/10" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                             alt="Water reflection of Amersfoort">
+                        <figcaption>aspect-ratio="16/10"</figcaption>
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <img aspect-ratio="16/9" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                             alt="Water reflection of Amersfoort">
+                        <figcaption>aspect-ratio="16/9"</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-fit-md gallery">
+                <div class="col">
+                    <figure>
+                        <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                            alt="Water reflection of Amersfoort">
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
+                </div>
+                <div class="col gallery-item">
+                    <a href="#">
+                        <figure>
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                            <figcaption>ratio-wide</figcaption>
+                        </figure>
+                    </a>
                 </div>
             </div>
 
