Edited figure, image and figcaption
Due to the new support in Chrome, Edge and Opera for the :has() relational pseudo-class. In the case of an anchor element in the figure element, it takes on a gallery style. In any other case, the figcaption sits directly against the image.

--- a/image.html
+++ b/image.html
@@ -172,24 +172,41 @@
                         <figcaption>aspect-ratio="16/9"</figcaption>
                     </figure>
                 </div>
+                <div class="col">
+                    <figure>
+                        <img aspect-ratio="16/9" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                             alt="Water reflection of Amersfoort">
+                    </figure>
+                </div>
             </div>
 
             <div class="grid grid-cols-fit-md gallery">
-                <div class="col">
+                <div class="col gallery-item">
                     <figure>
-                        <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
-                            alt="Water reflection of Amersfoort">
+                        <a href="#">
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                        </a>
                         <figcaption>ratio-wide</figcaption>
                     </figure>
                 </div>
                 <div class="col gallery-item">
-                    <a href="#">
-                        <figure>
+                    <figure>
+                        <a href="#">
                             <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
                                 alt="Water reflection of Amersfoort">
-                            <figcaption>ratio-wide</figcaption>
-                        </figure>
-                    </a>
+                        </a>
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
+                </div>
+                <div class="col gallery-item">
+                    <figure>
+                        <a href="#">
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                        </a>
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
                 </div>
             </div>
 
