Edited figure, image and figcaption

--- a/image.html
+++ b/image.html
@@ -172,16 +172,10 @@
                         <figcaption>aspect-ratio="16/9"</figcaption>
                     </figure>
                 </div>
-                <div class="col">
-                    <figure>
-                        <img aspect-ratio="16/9" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
-                             alt="Water reflection of Amersfoort">
-                    </figure>
-                </div>
             </div>
 
-            <div class="grid grid-cols-fit-md gallery">
-                <div class="col gallery-item">
+            <div class="grid grid-cols-fit-md">
+                <div class="col">
                     <figure>
                         <a href="#">
                             <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
@@ -190,7 +184,7 @@
                         <figcaption>ratio-wide</figcaption>
                     </figure>
                 </div>
-                <div class="col gallery-item">
+                <div class="col">
                     <figure>
                         <a href="#">
                             <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
@@ -199,7 +193,34 @@
                         <figcaption>ratio-wide</figcaption>
                     </figure>
                 </div>
-                <div class="col gallery-item">
+                <div class="col">
+                    <figure>
+                        <a href="#">
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                        </a>
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <a href="#">
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                        </a>
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <a href="#">
+                            <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
+                                alt="Water reflection of Amersfoort">
+                        </a>
+                        <figcaption>ratio-wide</figcaption>
+                    </figure>
+                </div>
+                <div class="col">
                     <figure>
                         <a href="#">
                             <img class="ratio-wide" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
