Add a description to the images page

--- a/image.html
+++ b/image.html
@@ -43,12 +43,18 @@
 
                     <h1>Image</h1>
 
-                    <p>Work in proress...</p>
+                    <p>Single images or a gallery of images based on elements and class name:</p>
+
+                    <ul>
+                        <li><a href="#ratio-class">Images with a ratio class name</a></li>
+                        <li><a href="#data-attribute">Images with a custom data attribute</a></li>
+                        <li><a href="#anchor-element">Images with an anchor element, to make them clickable</a></li>
+                    </ul>
 
                 </div>
             </div>
 
-            <div class="grid grid-cols-fit-md">
+            <div id="ratio-class" class="grid grid-cols-fit-md">
                 <div class="col">
                     <figure>
                         <img class="ratio-square" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
@@ -93,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-fit-md">
+            <div id="data-attribute" class="grid grid-cols-fit-md">
                 <div class="col">
                     <figure>
                         <img aspect-ratio="1/1" src="assets/images/mitchel-lensink-bH5b8o59vlI-unsplash.jpg"
@@ -174,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-fit-md">
+            <div id="anchor-element" class="grid grid-cols-fit-md">
                 <div class="col">
                     <figure>
                         <a href="#">
