Adding a links and button page

--- a/columns-fit.html
+++ b/columns-fit.html
@@ -76,7 +76,7 @@
         <div class="footer__row">
             <div class="grid grid-cols">
                 <div class="col col-span-4">
-                    <h4>Grid & Columns</h4>
+                    <h4>Grid &amp; Columns</h4>
                     <ul>
                         <li><a href="columns-fit.html">Columns fit</a></li>
                         <li><a href="columns-fixed.html">Columns fixed</a></li>
@@ -88,13 +88,14 @@
                     <h4>Style</h4>
                     <ul>
                         <li><a href="colors.html">Colors</a></li>
+                        <li><a href="links-buttons.html">Links &amp; Buttons</a></li>
                         <li><a href="typography.html">Typography</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Content</h4>
                     <ul>
-                        <li><a href="audio-video.html">Audio & Video</a></li>
+                        <li><a href="audio-video.html">Audio &amp; Video</a></li>
                         <li><a href="image.html">Image</a></li>
                     </ul>
                 </div>
