--- a/links-buttons.html
+++ b/links-buttons.html
@@ -28,86 +28,21 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__row">
 
+        <div class="content__row">
+            
             <div class="grid grid-cols">
                 <div class="col col-span-12">
-                    <h1>Columns span</h1>
-                    <p>Grid with a class for the assigned number of columns and each column has its own class for the column span.</p>
+
+                    <h1>Links &amp; Buttons</h1>
+
+                    <p>Work in progress...</p>
+
                 </div>
             </div>
 
         </div>
-        <div class="content__row show-grid">
-            
-            <div class="grid grid-cols">
-                <div class="col col-span-12">span 12</div>
-            </div>
 
-            <div class="grid grid-cols">
-                <div class="col col-span-8">span 8</div>
-                <div class="col col-span-4">span 4</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-7">span 7</div>
-                <div class="col col-span-5">span 5</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-6">span 6</div>
-                <div class="col col-span-6">span 6</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-1">span 1</div>
-                <div class="col col-span-5">span 5</div>
-                <div class="col col-span-5">span 5</div>
-                <div class="col col-span-1">span 1</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-2">span 2</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-2-span-10">2 / span 10</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-3-span-8">3 / span 8</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-4-span-6">4 / span 6</div>
-            </div>
-
-        </div>
     </div>
     <footer class="page__footer">
 
