Adding buttons & links styles

--- a/links-buttons.html
+++ b/links-buttons.html
@@ -41,6 +41,33 @@
                 </div>
             </div>
 
+            <div class="grid grid-cols-3">
+                <div class="col">
+                    <ul class="list-style-none">
+                        <li><a href="https://github.com/guidoslotboom2">Primary link</a> lorem ipsum dolor</li>
+                        <li><a class="text-accent" href="https://github.com/guidoslotboom2">Accent link</a> lorem ipsum dolor</li>
+                        <li><a class="text-neutral" href="https://github.com/guidoslotboom2">Neutral link</a> lorem ipsum dolor</li>
+                        <li><a class="text-contrast" href="https://github.com/guidoslotboom2">Contrast link</a> lorem ipsum dolor</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul class="list-style-none">
+                        <li><a class="button filled-neutral" href="https://github.com/guidoslotboom2">Neutral button</a></li>
+                        <li><a class="button filled-primary" href="https://github.com/guidoslotboom2">Primary button</a></li>
+                        <li><a class="button filled-accent" href="https://github.com/guidoslotboom2">Accent button</a></li>
+                        <li><a class="button filled-contrast" href="https://github.com/guidoslotboom2">Contrast button</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul class="list-style-none">
+                        <li><a class="button outline-neutral" href="https://github.com/guidoslotboom2">Neutral button</a></li>
+                        <li><a class="button outline-primary" href="https://github.com/guidoslotboom2">Primary button</a></li>
+                        <li><a class="button outline-accent" href="https://github.com/guidoslotboom2">Accent button</a></li>
+                        <li><a class="button outline-contrast" href="https://github.com/guidoslotboom2">Contrast button</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
 
     </div>
