Fix at typography page for the character entities

--- a/typography.html
+++ b/typography.html
@@ -52,19 +52,19 @@
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <s>The strikethrough element.</s></p>
 
                     <ul>
-                        <li>The <code>&amp;lt;a&amp;gt;</code> tag for an <a>anchor</a> or <a href="typography.html">hyperlink</a>.</li>
-                        <li>The <code>&amp;lt;abbr&amp;gt;</code> and <code>&amp;lt;dfn&amp;gt;</code> tag for defining an abbreviation or an acronym, for example: <dfn><abbr title="Cascading Style Sheets">CSS</abbr> is a language that describes the style of an HTML document</dfn>.</li>
-                        <li>The <code>&amp;lt;b&amp;gt;</code> tag <b>provides more attention</b> due to the font weight.</li>
-                        <li>The <code>&amp;lt;cite&amp;gt;</code> tag to describe a reference <cite>for the author</cite>.</li>
-                        <li>The <code>&amp;lt;code&amp;gt;</code> tag for <code>marked code</code>.</li>
-                        <li>The <code>&amp;lt;em&amp;gt;</code> tag for text with <em>extra emphasis</em>.</li>
-                        <li>The <code>&amp;lt;strong&amp;gt;</code> tag <strong>provides additional more attention</strong> due to the font weight and color.</li>
-                        <li>The <code>&amp;lt;i&amp;gt;</code> tag for <i>italicized text</i>.</li>
-                        <li>The <code>&amp;lt;mark&amp;gt;</code> tag for <mark>marked text</mark>.</li>
-                        <li>The <code>&amp;lt;q&amp;gt;</code> tag for <i>quoted text</i> in a paragraph or list item.</li>
-                        <li>The <code>&amp;lt;s&amp;gt;</code> tag for <s>strikethrough text</s>.</li>
-                        <li>The <code>&amp;lt;samp&amp;gt;</code> tag for <samp>representing sample output</samp>.</li>
-                        <li>The <code>&amp;lt;u&amp;gt;</code> tag for <u>underlined text</u>.</li>
+                        <li>The <code>&lt;a&gt;</code> tag for an <a>anchor</a> or <a href="typography.html">hyperlink</a>.</li>
+                        <li>The <code>&lt;abbr&gt;</code> and <code>&lt;dfn&gt;</code> tag for defining an abbreviation or an acronym, for example: <dfn><abbr title="Cascading Style Sheets">CSS</abbr> is a language that describes the style of an HTML document</dfn>.</li>
+                        <li>The <code>&lt;b&gt;</code> tag <b>provides more attention</b> due to the font weight.</li>
+                        <li>The <code>&lt;cite&gt;</code> tag to describe a reference <cite>for the author</cite>.</li>
+                        <li>The <code>&lt;code&gt;</code> tag for <code>marked code</code>.</li>
+                        <li>The <code>&lt;em&gt;</code> tag for text with <em>extra emphasis</em>.</li>
+                        <li>The <code>&lt;strong&gt;</code> tag <strong>provides additional more attention</strong> due to the font weight and color.</li>
+                        <li>The <code>&lt;i&gt;</code> tag for <i>italicized text</i>.</li>
+                        <li>The <code>&lt;mark&gt;</code> tag for <mark>marked text</mark>.</li>
+                        <li>The <code>&lt;q&gt;</code> tag for <i>quoted text</i> in a paragraph or list item.</li>
+                        <li>The <code>&lt;s&gt;</code> tag for <s>strikethrough text</s>.</li>
+                        <li>The <code>&lt;samp&gt;</code> tag for <samp>representing sample output</samp>.</li>
+                        <li>The <code>&lt;u&gt;</code> tag for <u>underlined text</u>.</li>
                     </ul>
 
                     <ol>
