Edited and added button and link class names
For basic styles from buttons and links to applied style and color variants.

--- a/links-buttons.html
+++ b/links-buttons.html
@@ -19,9 +19,9 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="colors.html">Colors</a>
-                        <a href="image.html">Image</a>
-                        <a href="typography.html">Typography</a>
+                        <a class="button" href="colors.html">Colors</a>
+                        <a class="button" href="image.html">Image</a>
+                        <a class="button" href="typography.html">Typography</a>
                     </nav>
                 </div>
             </div>
@@ -44,26 +44,32 @@
             <div class="grid grid-cols-3">
                 <div class="col">
                     <ul class="list-style-none">
-                        <li><a href="https://github.com/guidoslotboom2">Primary link</a> lorem ipsum dolor</li>
-                        <li><a class="text-accent" href="https://github.com/guidoslotboom2">Accent link</a> lorem ipsum dolor</li>
-                        <li><a class="text-neutral" href="https://github.com/guidoslotboom2">Neutral link</a> lorem ipsum dolor</li>
-                        <li><a class="text-contrast" href="https://github.com/guidoslotboom2">Contrast link</a> lorem ipsum dolor</li>
+                        <li><a href="https://github.com/guidoslotboom2">Link</a> lorem ipsum dolor</li>
+                        <li><a class="link-primary" href="https://github.com/guidoslotboom2">Primary link</a> lorem ipsum dolor</li>
+                        <li><a class="link-accent" href="https://github.com/guidoslotboom2">Accent link</a> lorem ipsum dolor</li>
+                        <li><a class="link-neutral" href="https://github.com/guidoslotboom2">Neutral link</a> lorem ipsum dolor</li>
+                        <li><a class="link-contrast" href="https://github.com/guidoslotboom2">Contrast link</a> lorem ipsum dolor</li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet <a href="https://github.com/guidoslotboom2">link</a>, consectetur adipiscing elit <a class="text-primary" href="https://github.com/guidoslotboom2">primary link</a>.</p>
+                </div>
+                <div class="col">
+                    <ul class="list-style-none">
+                        <li><a class="button" href="https://github.com/guidoslotboom2">Button</a></li>
+                        <li><a class="button button-filled" href="https://github.com/guidoslotboom2">Button filled</a></li>
+                        <li><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button filled neutral</a></li>
+                        <li><a class="button button-filled-primary" href="https://github.com/guidoslotboom2">Button filled primary</a></li>
+                        <li><a class="button button-filled-accent" href="https://github.com/guidoslotboom2">Button filled accent</a></li>
+                        <li><a class="button button-filled-contrast" href="https://github.com/guidoslotboom2">Button filled contrast</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <ul class="list-style-none">
-                        <li><a class="button filled-neutral" href="https://github.com/guidoslotboom2">Neutral button</a></li>
-                        <li><a class="button filled-primary" href="https://github.com/guidoslotboom2">Primary button</a></li>
-                        <li><a class="button filled-accent" href="https://github.com/guidoslotboom2">Accent button</a></li>
-                        <li><a class="button filled-contrast" href="https://github.com/guidoslotboom2">Contrast button</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <ul class="list-style-none">
-                        <li><a class="button outline-neutral" href="https://github.com/guidoslotboom2">Neutral button</a></li>
-                        <li><a class="button outline-primary" href="https://github.com/guidoslotboom2">Primary button</a></li>
-                        <li><a class="button outline-accent" href="https://github.com/guidoslotboom2">Accent button</a></li>
-                        <li><a class="button outline-contrast" href="https://github.com/guidoslotboom2">Contrast button</a></li>
+                        <li><a class="button" href="https://github.com/guidoslotboom2">Button</a></li>
+                        <li><a class="button button-outline" href="https://github.com/guidoslotboom2">Button outline</a></li>
+                        <li><a class="button button-outline-neutral" href="https://github.com/guidoslotboom2">Button outline neutral</a></li>
+                        <li><a class="button button-outline-primary" href="https://github.com/guidoslotboom2">Button outline primary</a></li>
+                        <li><a class="button button-outline-accent" href="https://github.com/guidoslotboom2">Button outline accent</a></li>
+                        <li><a class="button button-outline-contrast" href="https://github.com/guidoslotboom2">Button outline contrast</a></li>
                     </ul>
                 </div>
             </div>
