Adjustments to the button styling

--- a/links-buttons.html
+++ b/links-buttons.html
@@ -19,9 +19,9 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a class="button" href="colors.html">Colors</a>
-                        <a class="button" href="image.html">Image</a>
-                        <a class="button" href="typography.html">Typography</a>
+                        <a href="colors.html">Colors</a>
+                        <a href="image.html">Image</a>
+                        <a href="typography.html">Typography</a>
                     </nav>
                 </div>
             </div>
@@ -51,6 +51,8 @@
                         <li><a class="link-contrast" href="https://github.com/guidoslotboom2">Contrast link</a> lorem ipsum dolor</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet <a href="https://github.com/guidoslotboom2">link</a>, consectetur adipiscing elit <a class="text-primary" href="https://github.com/guidoslotboom2">primary link</a>.</p>
+                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a> <a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
+                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
                 </div>
                 <div class="col">
                     <ul class="list-style-none">
@@ -71,6 +73,12 @@
                         <li><a class="button button-outline-accent" href="https://github.com/guidoslotboom2">Button outline accent</a></li>
                         <li><a class="button button-outline-contrast" href="https://github.com/guidoslotboom2">Button outline contrast</a></li>
                     </ul>
+                </div>
+            </div>
+
+            <div class="grid grid-cols">
+                <div class="col col-span-12">
+                    <p><a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a> <a class="button button-filled-neutral" href="https://github.com/guidoslotboom2">Button text</a></p>
                 </div>
             </div>
 
